fixed bottom spacing

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/detached/annual-report-2023.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/detached/annual-report-2023.scss
@@ -30,7 +30,6 @@ html {
 	font-family: $ar-23-font;
 	color: $ar-23-purple;
 	line-height: 150%;
-	padding-bottom: 100px;
 	overflow-x: hidden; // because of hanging flowers.
 
 	@import 'report_core';
